--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
         <a href="https://omuct-rose.jp/">ROSE</a>に所属
       </p>
       <p>
-        
+        2023年度の高専祭では、<a href="https://omuct-rose.jp/works/">HomecomingDay</a>
+        で、司会進行を務めました。
       </p>
 
 
