--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <p>
         　最適な導体棒の種類はアルミの丸棒でした。さらに、磁石の向きによる対照実験も行いました。上の動画は磁石を縦に置き、下の動画は磁石を横に置いたものです。
-        磁石を横に置くと磁石を囲っている物質の影響により導体棒が途中で止まってしまったと考えます。
+        磁石を横に置いた場合は磁石を囲っている物質の影響により導体棒が途中で止まってしまったと考えます。
       </p>
 
       
@@ -109,14 +109,23 @@
       </ol>
 
      <p>
-     以上の過程のDOBOTの先端に設置しているアームで、寿司ストッカーから出てきた寿司を掴み、トレーに移し替える動作のDOBOT制御をもう一人の学生と担当しました。
+     以上の過程のDOBOTの先端に設置しているアームで、寿司ストッカーから出てきた寿司を掴み、トレーに移す動作のDOBOT制御をもう一人の学生と担当しました。
      </p>
+
+     <p>
+     以下が作成したプログラムです。
+     </p>
+
+    <div>
+        <img src="client_2024_KB2.py.png" alt="リスト1" class="image1">
+        <img src="client_2024_KB2.py_02.png" alt="リスト2" class="image2">
+    </div>
 
       <h2>Other</h2>
 
 
 
-      2021年(入学当初)から
+      <h3>2021年～</h3>
       <p>
         <a href="https://omuct-rose.jp/">ROSE</a>に所属
       </p>
@@ -139,7 +148,21 @@
       </p>
 
       <p>
+        <要旨>
+        私は、小麦アレルギーを持っているためグルテンが含まれているパンなどの食品を食べることができません。そこで紹介したいのは、様々な米粉製品です。
+        小麦製品と味はほぼ変わりはないですが、高いというだけで普及しないのはもったいないと思います。そこで私は、少しでも今の価格より安く米粉製品を届けることができるように、
+        高専で学ぶ知識と技術を使って機械面で支えて行こうと考えています。
+      </p>
+
+      <p>
         3年次「To be a role model」
+      </p>
+      
+      <p>
+        <要旨>
+        小学生の頃に参加した公開講座で、一人の女性との出会いが私の人生を大きく変えました。その方は、後に私のロールモデルとなりました。
+        その後、私は高専に入学し、ROSEという女子学生有志団体に所属しています。そこでの活動は私を成長させてくれています。今では自信をもって自分の意見を伝えることができています。
+        私のロールモデルに近づくことができつつあると自負してます。私もいつか誰かのロールモデルになりたいです。
       </p>
 
       <h2>Skills</h2>
