--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </p>
       
       <p>
-      　micro:bit本体のLEDライトを制御するプログラムを書きました。このプログラムは(左の画像です)「Aボタンが押されったらハートの形をLEDで表現し、
+      　micro:bit本体のLEDライトを制御するプログラムを書きました。このプログラムは「Aボタンが押されったらハートの形をLEDで表現し、
       Bボタンが押されていたら8分音符を表示する、どちらも押されていなければ何も表示されない」というものです。
       </p>
 
@@ -59,7 +59,7 @@
         　この研究は物理の授業で扱う内容の実験テーマとなっていました。実験に興味を持つためには教科書に近いことが重要であると考え
         　教科書の例題・類題にできるだけ沿うような実験を選定しました。
         自作キットを廉価に抑えるために、レール上におく導体棒の値段を抑えることを考え、<strong>アルミホイルを巻いた割りばし</strong>、<strong>アルミ自作ワイヤー</strong>、<strong>アルミ丸棒</strong>
-        を用意し、実験を試みると、動きに差が出ました。</p>
+        を用意し実験してみると、動きに差が出ました。</p>
 
       <p>
         　最適な導体棒の種類はアルミの丸棒でした。さらに、磁石の向きによる対照実験も行いました。上の動画は磁石を縦に置き、下の動画は磁石を横に置いたものです。
